# voice_recognition_jrtec

./: .env  docker-compose.yml
traefik/: traefik.yml
voice_recognition/: Dockerfile  pyproject.toml
voice_recognition/app/: main.py
voice_recognition/app/api/v1/: api.py
voice_recognition/app/api/v1/endpoints/: recognition.py
voice_recognition/app/core/: config.py  utils.py
voice_recognition/app/schemas/: audio.py  response.py
