[tool.poetry]
name = "voice-recognition"
version = "0.1.0"
description = ""
authors = ["pelaezluis <luispelaezbedoya@gmail.com>"]
readme = "README.md"
packages = [{include = "voice_recognition"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
httpx = "^0.23.0"
black = "^22.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
